--- a/instagramweb.html
+++ b/instagramweb.html
@@ -47,7 +47,7 @@
               <span class="navbar-toggler-icon mr-5"></span>
             </button>
           </div>
-      <div class="collapse navbar-collapse">
+      <div class="collapse navbar-collapse row">
         <form class="form-inline my-2 my-lg-0 ml-5 d-none d-sm-block">
           <input
             class="form-control mr-sm-2 empty d-flex ml-5"
@@ -56,8 +56,10 @@
             style="font-family: Arial, FontAwesome; height: 28px; width: 216px"
             aria-label="Search"
           />
+          
+           <!--svg codes deleted from this area. it was added from assets file------->
         </form>
-        <svg aria-label="Ara" class="searchthing  _ab6- mr-sm-2 empty " color="#8e8e8e" fill="#8e8e8e" height="16" role="img" viewBox="0 0 24 24" width="16"><path d="M19 10.5A8.5 8.5 0 1110.5 2a8.5 8.5 0 018.5 8.5z" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path><line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" x1="16.511" x2="22" y1="16.511" y2="22"></line></svg>
+       
       </div>
       <div
         class="collapse navbar-collapse"
