--- a/instagramweb.html
+++ b/instagramweb.html
@@ -62,7 +62,7 @@
        
       </div>
       <div
-        class="collapse navbar-collapse"
+        class="collapse navbar-collapse ml-5 mt-2 d-sm-none d-md-block" 
       >
         <ul class="navbar-nav ">
           <li class="nav-item active">
@@ -101,9 +101,9 @@
       </div>
     </nav>
 
-    <div class="container middlearea position-relative " >
+    <div class="container middlearea col-6 col-xl-12 position-relative offset-2 mt-2" style="max-height: 200px !important;">
       <div class="row">
-        <div class="col-6">
+        <div class="col-6 ">
           <div class="card">
             <div class="card-body">
               <a href="https://www.instagram.com/kodluyoruz" style="text-decoration: none;" target="_blank">
@@ -563,7 +563,7 @@
             id="sticky-sidebar"
             style="width: 18rem"
           >
-            <div class="card-body d-flex" >
+            <div class="card-body  d-none d-sm-flex" >
               <div>
                 <a class="nav-link" href="#"
                   >
