--- a/instagramweb.html
+++ b/instagramweb.html
@@ -105,63 +105,63 @@
       <div class="row">
         <div class="col-12 col-sm-6 ">
           <div class="card">
-            <div class="card-body row">
+            <div class="card-body row  d-flex justify-content-center">
               <a href="https://www.instagram.com/kodluyoruz" style="text-decoration: none;" target="_blank">
               <img
                 src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/105971749_581051382486071_1053777149100084988_n.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=VMAJoeqh5IwAX_QH3Nt&tp=1&oh=3bd9dbd2532c87e350dfcfffec74f120&oe=602BAC27"
-                class="storyphoto img-fluid mr-3"
+                class="storyphoto img-fluid mr-2 d-flex"
               />
-              <span class="storytext">kodluyoruz</span>
+              <span class="storytext d-flex">kodluyoruz</span>
               </a>
               <a href="https://www.instagram.com/furkantolgayuce" style="text-decoration: none;" target="_blank">
               <img
                 src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/72779108_713693839133901_6123578952603664384_n.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=XqPxbR5poVwAX-ZBLnj&tp=1&oh=8ced290d281ab30c73ecab574c569f2e&oe=602E8762"
-                class="storyphoto img-fluid"
+                class="storyphoto img-fluid d-flex"
               />
-              <span class="storytext">furkantolga..</span>
+              <span class="storytext d-flex">furkantolga..</span>
             </a>
               <a href="https://www.instagram.com/elonrmuskk" style="text-decoration: none;" target="_blank">
               <img
                 src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/44329317_268583430479565_454483638147350528_n.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=nch-8fZvL_kAX-Vwc1_&tp=1&oh=834a7ad23234699addd8c447d3d754e6&oe=602E6230"
-                class="storyphoto img-fluid"
+                class="storyphoto img-fluid d-flex"
               />
-              <span class="storytext">elonrmuskk</span>
+              <span class="storytext d-flex">elonrmuskk</span>
             </a>
               <a href="https://www.instagram.com/hakanyalcinkaya" style="text-decoration: none;" target="_blank">
               <img
                 src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/14032987_493625937508971_230505040_a.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=c5Y_pjOla0AAX99HkoC&tp=1&oh=00f276b589b86e96148f8bd4bc9f9d3d&oe=602DF398"
-                class="storyphoto img-fluid"
+                class="storyphoto img-fluid d-flex"
               />
-            <span class="storytext">hakanyalcin..</span>
+            <span class="storytext d-flex">hakanyalcin..</span>
             </a>
               <a href="https://www.instagram.com/ozgeacik" style="text-decoration: none;" target="_blank">
               <img
                 src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/119053109_669154464028736_1319092899898353971_n.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=NiXGvR0sHIUAX_K5Au0&tp=1&oh=b2dde859aadfda60ccbacefaf78214b2&oe=602D300C"
-                class="storyphoto img-fluid"
+                class="storyphoto img-fluid d-flex"
               />
-            <span class="storytext mr-2">ozgeacik</span>
+            <span class="storytext mr-2 d-flex">ozgeacik</span>
             </a>
               <a href="https://www.instagram.com/kablosuzkedi" style="text-decoration: none;" target="_blank">
               <img
                 src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/891383_1620336344912760_190799662_a.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=wSpwFcLtz80AX-U66oZ&oh=5be739ba968afed2145c0be933c6ffa6&oe=602ECE8C"
-                class="storyphoto img-fluid"
+                class="storyphoto img-fluid d-flex"
               />
-            <span class="storytext">kablosuzkedi</span>
+            <span class="storytext d-flex">kablosuzkedi</span>
             </a>
               <a href="https://www.instagram.com/gulcanyayla" style="text-decoration: none;" target="_blank">
               <img
                 src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/20066031_478409979176247_1637931957817966592_a.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=qVGZVeaAAyQAX-uPqnT&tp=1&oh=da209b286e6b9af6692a7eaab5db9fe7&oe=602C10BA"
-                class="storyphoto img-fluid"
+                class="storyphoto img-fluid d-flex"
               />
-                <span class="storytext">gulcanyayla</span>
+                <span class="storytext d-flex">gulcanyayla</span>
             </a>
             </div>
           </div>
           <div class="card">
-            <div class="card-header">
+            <div class="card-header bg-white">
               <img
                 src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/83792429_185184289374945_1047727451901263872_n.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=oor-Z1FIzvgAX-uXuhs&tp=1&oh=e92baf321c3e2e5ebf9416204da05c82&oe=602E0320"
-                class="mr-2"
+                class="mr-2 "
                 style="width: 35px; height: 35px; border-radius: 50%"
               />
               <span class="postuserfont"><strong><a href="https://www.instagram.com/cengizcmataraci" target="_blank" style="color: black;">cengizcmataraci</a></strong></span>
@@ -176,9 +176,9 @@
             />
             <ul
               class="list-group list-group-horizontal mt-1"
-              style="list-style-type: none;"
+              style="list-style-type: none; border-style: none;"
             >
-              <li class="nav-item">
+              <li class="nav-item d-flex flex-row">
                 <a class="nav-link" href="#"
                   ><i
                     class="far fa-heart fa-lg"
@@ -186,7 +186,7 @@
                   ></i
                 ></a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item d-flex flex-row">
                 <a class="nav-link" href="#"
                   ><i
                     class="far fa-comment fa-lg"
@@ -199,7 +199,7 @@
                   ></i
                 ></a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item d-flex flex-row">
                 <a class="nav-link" href="#"
                   ><i
                     class="far fa-paper-plane fa-lg"
@@ -212,11 +212,11 @@
                   ></i
                 ></a>
               </li>
-              <span class="">
-                <li class="nav-item ml-4">
-                  <a class="nav-link ml-2" href="#"
+              <span >
+                <li class="nav-item ">
+                  <a class="nav-link ml-2 " href="#"
                     ><i
-                      class="far fa-bookmark fa-lg"
+                      class="far fa-bookmark fa-lg "
                       style="color: black; position: relative; font-size: 23px"
                     ></i
                   ></a>
@@ -275,7 +275,7 @@
               </p>
             </div>
             <div
-              class="card-footer"
+              class="card-footer bg-white text-right"
               style="
                 color: rgb(139, 133, 133);
                 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI',
@@ -284,14 +284,14 @@
                 font-size: 14px;
               "
             >
-              <span style="margin-left: -4px">Yorum Ekle...</span
+              <span style="margin-right: 0px;">Yorum Ekle...</span
               ><span class="" style="color: #0095f6; opacity: 50%"
                 ><strong>Paylaş</strong></span
               >
             </div>
           </div>
           <div class="card">
-            <div class="card-header">
+            <div class="card-header bg-white">
               <img
                 src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/105971749_581051382486071_1053777149100084988_n.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=VMAJoeqh5IwAX_QH3Nt&tp=1&oh=3bd9dbd2532c87e350dfcfffec74f120&oe=602BAC27"
                 class="mr-2"
@@ -408,7 +408,7 @@
               </p>
             </div>
             <div
-              class="card-footer"
+              class="card-footer bg-white text-right"
               style="
                 color: rgb(139, 133, 133);
                 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI',
@@ -424,7 +424,7 @@
             </div>
           </div>
           <div class="card mb-3">
-            <div class="card-header">
+            <div class="card-header bg-white">
               <img
                 src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/44329317_268583430479565_454483638147350528_n.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=nch-8fZvL_kAX-Vwc1_&tp=1&oh=834a7ad23234699addd8c447d3d754e6&oe=602E6230"
                 class="mr-2"
@@ -541,7 +541,7 @@
               </p>
             </div>
             <div
-              class="card-footer"
+              class="card-footer bg-white text-right"
               style="
                 color: rgb(139, 133, 133);
                 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI',
@@ -557,7 +557,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-sm-6">
           <div
             class="card col-xs-12 rightpanel"
             id="sticky-sidebar"
