--- a/instagramweb.html
+++ b/instagramweb.html
@@ -557,7 +557,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-3">
           <div
             class="card col-xs-12 rightpanel"
             id="sticky-sidebar"
